# codex-ledger

./: .gitignore  AGENTS.md  CodexLedger-threat-model.md  README.md  codex-ledger-implementation-brief-v2.md  codex-ledger-implementation-brief.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  CODEBASE_TASK_PROPOSALS.md  CONTRIBUTING.md  DATA_MODEL.md  FUTURE_WORK.md  PRICING_PROVENANCE.md  PRIVACY.md  RELEASE_READINESS.md  REPORT_SCHEMA.md  SECURITY.md
pricing/: README.md
pricing/rules/: README.md
schemas/reports/: README.md  aggregate-report-v1.schema.json  explain-report-v1.schema.json
scripts/: README.md
src/codex_ledger/: __init__.py  __main__.py  paths.py
src/codex_ledger/cli/: __init__.py  main.py
src/codex_ledger/domain/: __init__.py  records.py
src/codex_ledger/ingest/: __init__.py  discovery.py  service.py
src/codex_ledger/migrations/: 0001_initial.sql  0002_phase1_ledger.sql  0003_phase2_workspace_lineage.sql  0004_phase2.1_agent_observability.sql  0005_phase3_pricing.sql  __init__.py
src/codex_ledger/normalize/: __init__.py  privacy.py  workspaces.py
src/codex_ledger/pricing/: __init__.py  rules.py  service.py
src/codex_ledger/pricing/rules_data/: reference_usd_openai_standard_2026_04_07.json
src/codex_ledger/providers/: __init__.py
src/codex_ledger/providers/codex/: __init__.py  parser.py
src/codex_ledger/reconcile/: __init__.py  service.py
src/codex_ledger/render/: __init__.py  service.py
src/codex_ledger/reports/: __init__.py  agents.py  aggregate.py  artifacts.py  common.py  explain.py  schema.py  workspaces.py
src/codex_ledger/reports/schemas_data/: agent-diagnostics-v1.schema.json  aggregate-report-v1.schema.json  workspace-report-v1.schema.json
src/codex_ledger/storage/: __init__.py  archive.py  migrations.py  output.py  repository.py
src/codex_ledger/utils/: __init__.py  hashing.py  json.py  terminal.py  time.py
src/codex_ledger/verify/: __init__.py  service.py
tests/: __init__.py  test_support.py
tests/fixtures/: README.md
tests/fixtures/codex/: imported_report.json  lineage_child_rollout.jsonl  lineage_parent_rollout.jsonl  malformed_rollout.jsonl  path_like_model_report.json  sample_rollout.jsonl  unknown_workspace_rollout.jsonl
tests/integration/: test_cli.py
tests/snapshots/: README.md
tests/unit/: test_agent_observability.py  test_delivery.py  test_importer.py  test_migrations.py  test_paths.py  test_pricing.py  test_reports.py
