[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "codex-ledger"
version = "0.1.0"
description = "Local-first, auditable usage ledger for Codex session artifacts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
  { name = "Mark Hardy" },
]
keywords = ["codex", "cli", "ledger", "sqlite", "usage"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "Pillow>=10.4",
]

[project.scripts]
codex-ledger = "codex_ledger.cli.main:main"

[dependency-groups]
dev = [
  "mypy>=1.18",
  "pytest>=8.4",
  "ruff>=0.13",
]

[tool.hatch.build]
include = [
  "src/codex_ledger/**/*.py",
  "src/codex_ledger/migrations/*.sql",
  "src/codex_ledger/pricing/rules_data/*.json",
  "src/codex_ledger/reports/schemas_data/*.json",
  "pricing/README.md",
  "pricing/rules/*.json",
  "pricing/rules/README.md",
  "schemas/reports/*.json",
  "schemas/reports/README.md",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/codex_ledger"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
